RESOLVED FIXED 88044
[Platform][Decimal] UInt128::operator/= calls makeUInt128 with wrong argument order.
https://bugs.webkit.org/show_bug.cgi?id=88044
Summary [Platform][Decimal] UInt128::operator/= calls makeUInt128 with wrong argument...
yosin
Reported 2012-05-31 21:35:09 PDT
There is code cleanup failure: UInt128& UInt128::operator /=(const uint32_t divisor) { ... ORIGINAL: const uint64_t work = (uint64_t(remainder) << 32) | dividend[i]; CLEANUP: const uint64_t work = makeUInt64(remainder, dividend[i]); However, signature of makeUInt64 is static uint64_t makeUInt64(uint32_t low, uint32_t high)
Attachments
Patch 1 (3.10 KB, patch)
2012-06-01 00:18 PDT, yosin
no flags
yosin
Comment 1 2012-05-31 21:52:59 PDT
This bug affects only multiplication.
yosin
Comment 2 2012-06-01 00:18:57 PDT
yosin
Comment 3 2012-06-01 00:20:07 PDT
Comment on attachment 145223 [details] Patch 1 I made mistake for rewriting to makeUInt128. Could you review this patch? Thanks in advance.
Kent Tamura
Comment 4 2012-06-01 00:24:05 PDT
Comment on attachment 145223 [details] Patch 1 ok
WebKit Review Bot
Comment 5 2012-06-01 02:41:00 PDT
Comment on attachment 145223 [details] Patch 1 Clearing flags on attachment: 145223 Committed r119205: <http://trac.webkit.org/changeset/119205>
WebKit Review Bot
Comment 6 2012-06-01 02:41:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.