[Platform][Decimal] UInt128::operator/= calls makeUInt128 with wrong argument order https://bugs.webkit.org/show_bug.cgi?id=88044

Reviewed by Kent Tamura.

Source/WebCore:

This patch fixed wrong argument of makeUInt128 in UInt128::operator/= to get right
result for decimal multiplication.

Test: WebKit/chromium/tests/DecimalTest.cpp: Add new a new test case.

* platform/Decimal.cpp:
(WebCore::DecimalPrivate::UInt128::operator/=):

Source/WebKit/chromium:

* tests/DecimalTest.cpp:
(TEST_F): Add a new test for multiplication.


Canonical link: https://commits.webkit.org/105884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119205 268f45cc-cd09-0410-ab3c-d52691b4dbfc